--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="modal">
+    <div id="container">
       <div class="top-buttons-container">
-        <button id="myButton" class="valueButton">Value &#9660;</button>
+        <button id="value-button">Value &#9660;</button>
         <button class="close-button">X</button>
       </div>
       <div class="modal-content" style="display: none;">
